# huaqi-I

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  PRD.md  QUICK_START.md  README.md  README_SIMPLE.md  SPEC.md  cli.py  demo_ui.py  pyproject.toml  requirements.txt  test10.py  test11.py  test2.py  test3.py  test9.py  test_json.py  test_llm.py  test_llm_connection.py  test_pty2.py  test_script.py  test_wrap.py
.codeflicker/: config.local.json
.test_data/memory/: config.yaml
agent/: hooks.py
docs/: ARCHITECTURE.md  DOC_GUIDELINES.md  PROACTIVE_CARE.md
docs/design/: ARCHITECTURE.md  SPEC.md  memory-retrieval-strategy.md
docs/designs/: 2026-01-04-lesson-complete-mark.md  2026-01-04-personal-growth-system-design.md  2026-02-04-dependency-architecture-design.md  2026-03-29-save-brainstorm-design.md  2026-03-31-learning-assistant.md  2026-03-31-report-data-provider-registry.md  2026-04-03-cli-report-viewer.md  2026-05-04-codeflicker-worklog-storage.md  2026-07-04-google-search-tool.md  2026-10-04-telos-acceptance-checklist.md  2026-10-04-telos-design-and-implementation.md  2026-11-04-telos-next-phase-acceptance-checklist.md  2026-11-04-telos-next-phase-design.md  2026-11-04-work-habit-to-codeflicker.md  2026-17-04-data-dir-spec.md
docs/features/: agentic-memory-retrieval.md  cli-report-viewer.md  core-engine.md  langgraph-agent.md  learning-assistant.md  listeners.md  report-data-provider-registry.md  scheduler.md  world-pipeline-and-job-recovery.md
docs/guides/: cli-guide.md  cli-ui-improvements.md  code-organization.md  code-standards.md  usage.md
docs/iterations/: BUGLIST.md
docs/ops/: implementation-plan.md
docs/plans/: 2026-01-04-lesson-complete-mark.md  2026-01-04-remaining-features.md  2026-03-30-huaqi-memory-recall.md  2026-03-30-phase2-deep-understanding.md  2026-03-31-report-data-provider-registry.md  2026-04-03-cli-report-viewer.md  2026-05-04-codeflicker-worklog-storage.md  2026-05-14-reports-github-actions.md  2026-09-04-scheduler-deep-audit.md  2026-09-04-scheduler-refactor-gaps.md  2026-11-04-work-habit-to-codeflicker.md  2026-17-04-data-dir-spec-implementation.md  ROADMAP.md  _TEMPLATE.md  telos-distillation-scheduling.md
docs/specs/: 2026-05-14-reports-github-actions.md  _TEMPLATE.md  telos-distillation-scheduling.md
examples/: memory_examples.md
huaqi/: __init__.py
huaqi/agent/: __init__.py
huaqi/core/: auth.py  config.py  config_hot_reload.py  config_simple.py  conversation.py  diary_simple.py  hooks_simple.py  llm.py  memory_extractor.py  memory_initializer.py  personality_simple.py  personality_updater.py  sync.py
huaqi/pipeline/: __init__.py  core.py  models.py
huaqi/scheduler/: handlers.py  manager.py  pipeline_job.py
huaqi_src/agent/: __init__.py  chat_agent.py  hooks.py  state.py  tools.py
huaqi_src/cli/: __init__.py  chat.py  context.py  inbox.py  notifier.py  ui.py  ui_utils.py
huaqi_src/collectors/: cli_chat_parser.py  cli_chat_watcher.py  inbox_processor.py  wechat_state.py  wechat_watcher.py  wechat_writer.py
huaqi_src/config/: __init__.py  errors.py  hot_reload.py  manager.py  paths.py  users.py
huaqi_src/core/: __init__.py  adaptive_understanding.py  analysis_engine.py  config_manager.py  config_paths.py  config_simple.py  db_storage.py  deep_analysis.py  diary_simple.py  dimension_manager.py  event.py  flexible_store.py  git_auto_commit.py  growth_simple.py  (+11 more)
research_output/: KEY_CODE_EXAMPLES.py  SUMMARY.md
scripts/: batch_distill.sh  migrate_imports.py  migrate_v3_to_v4.py  test_llm_connection.py
spec/: IMPORT_GUIDE.md  MULTI_USER_DESIGN.md
tests/: conftest.py  smoke_test.py
(+417 files in other folders)
